モバイル時のメニュー

--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,12 @@ li {
     list-style: none;
 }
 
+/* global nav start */
 .global_nav{
     height: 70px;
     position: sticky;
     top: 0;
 }
-
 .global_nav_ul {
     display: flex;
     justify-content: end;
@@ -33,6 +33,30 @@ li {
     padding: 30px 10px;
     font-size: 30%;
 }
+/* PC・タブレット時 */
+@media (min-width: 768px){
+    .hamburger {
+        display: none;
+    }
+}
+/* モバイル時 */
+@media (max-width: 767px){
+    .global_nav_ul {
+        display: none;
+    }
+}
+/* ハンバーガーメニュー start */
+.hamburger .hamburger__icon, 
+.hamburger .hamburger__icon:before, 
+.hamburger .hamburger__icon:after {
+    background-color: white;
+}
+.hamburger.active .hamburger__icon:before, 
+.hamburger.active .hamburger__icon:after {
+    background-color: white;
+}
+/* ハンバーガーメニュー end  */
+/* global nav end */
 
 /* #top start */
 .top_main {
