--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 html {
     height: 100%;
     line-height: 25px;
@@ -7,11 +9,14 @@ html {
 
 body {
     margin: 0;
-    font-family: 'Noto Serif JP', serif;
+    font-family: Yu Gothic;
     color: #333333;
 }
 li {
     list-style: none;
+}
+h2 {
+    font-weight: 400;
 }
 
 /* global nav start */
@@ -84,7 +89,26 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
+
 }
+.feature_img h1 {
+    font-family: 'Pacifico', cursive;
+    font-size: 3.5rem;
+    text-align: center;
+    font-weight: 100;
+}
+.feature_img p {
+    text-align: center;
+}
+/* モバイル時 */
+@media (max-width: 767px){
+.feature_img h1 {
+    font-size: 2rem;
+    font-weight: 100;
+    }
+}
+
 /* PC・タブレット時 */
 @media (min-width: 768px){
     .feature_img {
@@ -275,7 +299,7 @@ li {
     .section_access {
         flex-direction: column;
         height: 80%;
-        font-size: 8%;
+        font-size: 12px;
     }.access iframe {
         width: 100%;
         height: 250px;
