--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@ html {
     height: 100%;
     line-height: 25px;
 }
-
 body {
     margin: 0;
     font-family: Yu Gothic;
@@ -90,7 +89,6 @@ h2 {
     align-items: center;
     justify-content: center;
     color: white;
-
 }
 .feature_img h1 {
     font-family: 'Pacifico', cursive;
@@ -108,7 +106,6 @@ h2 {
     font-weight: 100;
     }
 }
-
 /* PC・タブレット時 */
 @media (min-width: 768px){
     .feature_img {
@@ -117,6 +114,7 @@ h2 {
 }
 /* #top end */
 
+/* #vision start */
 .vision_text {
     display: flex;
     flex-direction: column;
@@ -132,9 +130,9 @@ h2 {
         width: 80%;
     }
 }
+/* #vision end */
 
 /* #message start */
-/* 共通 */
 .message_content {
     display: flex;
 }
@@ -145,7 +143,6 @@ h2 {
     justify-content: center;
     background-color: rgb(246,246,246);
 }
-
 /* PC・タブレット時 */
 @media (min-width: 768px){
     .message_content:last-child {
@@ -158,7 +155,6 @@ h2 {
         width: 50%;
     }
 }
-
 /* モバイル時 */
 @media (max-width: 767px){
     .message_content {
@@ -219,7 +215,6 @@ h2 {
     padding-top: 4px;
     width: 80%;
 }
-
 /* PC・タブレット時 */
 @media (min-width: 768px){
     .section_servise {
@@ -228,7 +223,6 @@ h2 {
         margin: 7%;
     }
 }
-
 /* モバイル時 */
 @media (max-width: 767px){
     .section_servise {
@@ -239,7 +233,6 @@ h2 {
         padding-top: 12%;
     }
 }
-
 /* service end */
 
 /* #story start */
@@ -266,7 +259,6 @@ h2 {
         height: fit-content;
     }
 }
-
 /* #story end */
 
 /* #access start */
@@ -279,11 +271,9 @@ h2 {
     margin: 10%;
 
 }
-
 .access {
     margin: 5%;
 }
-
 .access tr th {
     display: flex;
     justify-content: right;
