--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,14 @@ h2 {
     display: flex;
     align-items: center;
     padding: 30px 10px;
-    font-size: 30%;
+    font-size: 1rem;
 }
 /* PC・タブレット時 */
 @media (min-width: 768px){
-    .hamburger {
-        display: none;
+    .fat-nav,
+    .hamburger
+    {
+        display: none !important;
     }
 }
 /* モバイル時 */
@@ -178,7 +180,6 @@ h2 {
 .section_servise {
     display: flex;
     text-align: center;
-    margin-top: 3%;
 }
 .servise_box {
     display: flex;
@@ -219,8 +220,7 @@ h2 {
 @media (min-width: 768px){
     .section_servise {
         justify-content: space-around;
-        margin-right: 15%;
-        margin: 7%;
+        margin: 7% 15% 7% 15%;
     }
 }
 /* モバイル時 */
@@ -261,8 +261,8 @@ h2 {
 }
 /* #story end */
 
-/* #access start */
-.section_access {
+/* #profile start */
+.section_profile {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,31 +271,32 @@ h2 {
     margin: 10%;
 
 }
-.access {
+.profile {
     margin: 5%;
 }
-.access tr th {
+.profile tr th {
     display: flex;
     justify-content: right;
     margin-right: 30px;
     height: 40px;
     align-items: center;
 }
-.access td a {
+.profile td a {
     text-decoration: none;
 }
+
 /* モバイル時 */
 @media (max-width: 767px){
-    .section_access {
+    .section_profile {
         flex-direction: column;
         height: 80%;
         font-size: 12px;
-    }.access iframe {
+    }.profile iframe {
         width: 100%;
         height: 250px;
     }
 }
-/* #access end */
+/* #profile end */
 
 footer {
     display: flex;
